$Id: History,v 1.4 2000-08-18 14:35:09 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Test History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
18th August 2000  Michel Maire  
- standard G4ionIonisation removed from the PhysicsList

18.08.2000 - VI,
             Remove G4ionIonisation and G4ionLowEnergyIonisation
             Clean up output and remove visualisation

26.06.2000 - JA, tag test17-V01-01-03
- Added test17.large_N.in.

24.06.2000 - MGP, tag test17-V01-01-02
             Modification to G4Ion... test classes by V. Ivanchenko to 
	     fix crash on exit on Linux
